[package]
name = "crypt"
version = "0.1.0"
authors = ["David Goldstein <neeerp@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.4.0"
ofb = "0.2.0"
hex-literal = "0.3.0"
rand = "0.7.3"
byteorder = "1.3.4"
