[package]
name = "net"
version = "0.1.0"
authors = ["David Goldstein <goldstein.g.david@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packet = { path = "../packet" }
crypt = { path = "../crypt" }
db = { path = "../db" }
bufstream = "0.1.4"
rand = "0.7.3"
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
