[package]
name = "rust-ms-login"
version = "0.1.0"
authors = ["David Goldstein <goldstein.g.david@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1.4"
crypt = { path = "../crypt"}
packet = { path = "../packet" }
net = { path = "../net" }