[package]
name = "rust-ms"
version = "0.1.0"
authors = ["David Goldstein <goldstein.g.david@gmail.com>"]
edition = "2021"

[dependencies]
net = { path = "../net" }
runtime = { path = "../runtime" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3"
